force-app/main/default/objects/Policy_Currency__c/Policy_Currency__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Policy Currency</label>
</CustomObject>