force-app/main/default/objects/Policy_Currency__c/fields/Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee__c</fullName>
    <label>Agency Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>