force-app/main/default/objects/Policy_Currency__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>