force-app/main/default/objects/Policy_Currency__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <label>Premium Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>