force-app/main/default/objects/Policy_Currency__c/fields/Premium_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Premium_to_Pay__c</fullName>
    <label>Premium to Pay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>