force-app/main/default/objects/Policy_Currency__c/fields/Unpaid_Agency_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Agency_Fee__c</fullName>
    <label>Unpaid Agency Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>