force-app/main/default/objects/Policy_Currency__c/fields/Unpaid_Premium__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Premium__c</fullName>
    <label>Unpaid Premium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>