force-app/main/default/objects/Policy_Currency__c/fields/Value_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Value_Date_Field__c</fullName>
    <label>Value Date Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>